.provarCaches/00D6C0000000xA6UAI/objects/ccrz__E_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>ccrz__ConfigurationId__c</fullName>
        <description>External Id that can be used for data loading purposes.  Not used by B2B Commerce.</description>
        <externalId>true</externalId>
        <label>Configuration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ConfigurationMeta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Configuration Metadata object that is used to define how this Configuration is used.</description>
        <label>CC Configuration Metadata</label>
        <referenceTo>ccrz__E_ConfigurationMeta__c</referenceTo>
        <relationshipLabel>CC Configurations</relationshipLabel>
        <relationshipName>Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__PageName__c</fullName>
        <defaultValue>&apos;all&apos;</defaultValue>
        <description>Page name for this configuration.  This follows the page label model for page specific configurations and includes the use of the CC Subscriber Page pageKey as a valid value.
All is considered all pages.</description>
        <externalId>true</externalId>
        <label>Page Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SequencePriority__c</fullName>
        <description>Field that is used to determine the priority for configurations for a given combination of storefront and page.  Used internally by B2B Commerce.  Should not be modified.</description>
        <externalId>true</externalId>
        <label>Sequence Priority</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <defaultValue>&apos;global&apos;</defaultValue>
        <description>The storefront for which this Configuration applies.  Should either be a specific storefront or the value &apos;Global&apos;.</description>
        <externalId>true</externalId>
        <label>Storefront</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__TextValue__c</fullName>
        <description>Data value for the configuration.</description>
        <label>Text Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CC Configuration</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>NAME</columns>
        <columns>ccrz__ConfigurationMeta__c</columns>
        <columns>ccrz__PageName__c</columns>
        <columns>ccrz__Storefront__c</columns>
        <columns>ccrz__TextValue__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Configurations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>